<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="mobiledata_preference">

    <SwitchPreference
        android:defaultValue="false"
        android:key="mobile_switch"
        android:summary="@string/mobileswitch_summary"
        android:title="@string/mobileswitch_title" />
    <ListPreference
        android:dependency="mobile_switch"
        android:defaultValue="MB"
        android:entries="@array/mobile_list"
        android:entryValues="@array/mobile_list_values"
        android:key="mobile_list"
        android:title="@string/mobilelist_title"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"/>
    <EditTextPreference
        android:dependency="mobile_switch"
        android:inputType="number"
        android:key="mobile_text"
        android:defaultValue="0"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/mobiletext_title" />
    <Preference
        android:key="pref_static_field_key3"
        android:persistent="false"
        android:selectable="false"
        android:summary="@string/mobiletext_summary"
        android:title="" />

</PreferenceScreen>
