<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bwq="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:title="@string/item1"
        app:showAsAction="never" />
    <item
        android:id="@+id/rate"
        android:title="@string/item2"
        app:showAsAction="never" />
    <item
        android:id="@+id/share"
        android:title="@string/item3"
        app:showAsAction="never"
        bwq:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
    <item
        android:id="@+id/refresh"
        android:title="@string/item4"
        android:icon="@drawable/refresh_icon"
        app:showAsAction="ifRoom" />
</menu>