<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.example.kabeer.datasaver.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.example.kabeer.datasaver.SettingsActivity$TimePreferenceFragment"
        android:icon="@drawable/ic_timer_black_24dp"
        android:title="@string/pref_header_time" />

    <header
        android:fragment="com.example.kabeer.datasaver.SettingsActivity$WifiPreferenceFragment"
        android:icon="@drawable/ic_wifi_black_24dp"
        android:title="@string/pref_header_wifi" />

    <header
        android:fragment="com.example.kabeer.datasaver.SettingsActivity$MobileDataPreferenceFragment"
        android:icon="@drawable/ic_mobiledata_black_24dp"
        android:title="@string/pref_header_mobiledata" />

    <header
        android:fragment="com.example.kabeer.datasaver.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notification" />

</preference-headers>
