<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="time_switch"
        android:summary="@string/timeswitch_summary"
        android:title="@string/timeswitch_title" />

    <ListPreference
        android:defaultValue="15"
        android:entries="@array/time_list"
        android:entryValues="@array/time_list_values"
        android:key="time_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/timelist_title"
        android:dependency="time_switch"/>
    <Preference
        android:key="pref_static_field_key1"
        android:persistent="false"
        android:selectable="false"
        android:summary="@string/time_summary"
        android:title="" />

</PreferenceScreen>